[package]
name = "fforget"
version = "0.0.2"
edition = "2021"
authors = ["Christos Katsakioris <ckatsak@gmail.com>"]
description = """
Safe, opinionated, high-level interface for Linux page cache inspection &
manipulation system calls
"""
#documentation = "https://docs.rs/fforget"
readme = "README.md"
repository = "https://github.com/ckatsak/fforget-rs"
license = "Apache-2.0"
#keywords = []
#categories = []

[dependencies]
bitvec = "1"
libc = "^0.2.116"
thiserror = "^1"

#[dev-dependencies]
#anyhow = "1"
